<resources>
    <string name="app_name">Inventory App</string>
    <string name="sms_permission_question">This app can send you a text message notification each time an inventory item\'s quantity reaches zero. Do you wish to grant SMS permissions so we can send text message notifications?</string>
    <string name="enabling_sms_notifications">Enabling SMS Notifications</string>
    <string name="ok">OK</string>
    <string name="disabling_sms_notifications">Disabling SMS Notifications</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="warehouse_inventory_manager">Warehouse Inventory Manager</string>
    <string name="enter_username">Enter Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="product_name">Product Name</string>
    <string name="quantity">Quantity</string>
    <string name="date">Date</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
</resources>