<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200">


    <TextView
        android:id="@+id/txtSmsInfo"
        android:layout_width="337dp"
        android:layout_height="251dp"
        android:layout_margin="20dp"
        android:layout_marginTop="279dp"
        android:layout_marginBottom="367dp"
        android:text="@string/sms_permission_question"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/acceptButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.328" />

    <Button
        android:id="@+id/acceptButton"
        android:layout_width="195dp"
        android:layout_height="85dp"
        android:layout_margin="8dp"
        android:layout_marginStart="7dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/accept"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/declineButton"
        android:layout_width="195dp"
        android:layout_height="85dp"
        android:layout_margin="8dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/decline"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- The dialog boxes below are meant as confirmation messages after the user
    accepts or declines SMS notifications. Both are set as invisible, but can be
    set to visible to see box. They are used as placeholders until logic can be
    implemented-->

    <FrameLayout
        android:id="@+id/dialogBox"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-48dp"
        tools:layout_editor_absoluteY="146dp">

    <!-- Dialog box appears if user accepts
    -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/white"
            android:elevation="8dp"
            android:orientation="vertical"
            android:padding="20dp"
            android:visibility="invisible">

            <TextView
                android:id="@+id/txtDialogMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/enabling_sms_notifications"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:text="@string/ok" />
        </LinearLayout>

        <!-- Dialog box appears if user declines
    -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/white"
            android:elevation="8dp"
            android:orientation="vertical"
            android:padding="20dp"
            android:visibility="invisible">

            <TextView
                android:id="@+id/txtDialogMessage2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/disabling_sms_notifications"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnOk2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:text= "@string/ok" />
        </LinearLayout>
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>